<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tap</string>
    <string name="username_text">Username:</string>
    <string name="password_text">Password:</string>
    <string name="log_in_text">Log In</string>
    <string name="create_account_text">Create Account</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="current_user_text">User:</string>
    <string name="notifications_text">Notifications</string>
    <string name="people_text">People</string>
    <string name="groups_text">Groups</string>
    <string name="log_out_text">Log Out</string>
    <string name="search_text">Search</string>
    <string name="reset_text">Reset</string>
    <string name="create_text">Create</string>
    <string name="leave_text">Leave Group</string>
    <string name="instructions_text">Tap a patten of vibrations to send to this group on the button below.</string>
    <string name="tap_text">Tap Group</string>
    <string name="request_text">Add to Friends</string>
    <string name="invite_text">Invite to Group</string>
    <string name="selection_text">Selected Notification:</string>
    <string name="accept_text">Accept</string>
    <string name="decline_text">Decline</string>
    <string name="title_activity_menu">Tap - Menu</string>
    <string name="title_activity_people">Tap - People</string>
    <string name="title_activity_person">Tap - Person</string>
    <string name="title_activity_groups">Tap - Groups</string>
    <string name="title_activity_group">Tap - Group</string>
    <string name="title_activity_notifications">Tap - Notifications</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
