<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/primary_text_default_material_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_small_margin">

    <ImageView
        android:id="@+id/logo_image"
        android:src="@drawable/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_large_margin" />

    <TextView
        android:id="@+id/current_user_label"
        android:text="@string/current_user_text"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_small_margin"
        android:layout_below="@id/logo_image" />

    <TextView
        android:id="@+id/current_user_text"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_large_margin"
        android:layout_below="@id/current_user_label" />

    <Button
        android:id="@+id/notifications_button"
        android:text="@string/notifications_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="buttonNotifications"
        android:layout_below="@id/current_user_text" />

    <Button
        android:id="@+id/people_button"
        android:text="@string/people_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="buttonPeople"
        android:layout_below="@id/notifications_button" />

    <Button
        android:id="@+id/groups_button"
        android:text="@string/groups_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="buttonGroups"
        android:layout_below="@id/people_button" />

    <Button
        android:id="@+id/log_out_button"
        android:text="@string/log_out_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="buttonLogOut"
        android:layout_below="@id/groups_button" />

</RelativeLayout>
