<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/primary_text_default_material_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_small_margin">

    <TextView
        android:id="@+id/title_label"
        android:text="@string/notifications_text"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:textSize="@dimen/activity_large_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_small_margin" />

    <TextView
        android:id="@+id/selection_label"
        android:text="@string/selection_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_small_margin"
        android:layout_below="@id/title_label" />

    <TextView
        android:id="@+id/selection_type_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_small_margin"
        android:layout_below="@id/selection_label" />

    <TextView
        android:id="@+id/selection_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_small_margin"
        android:layout_below="@id/selection_type_text" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_small_margin"
        android:layout_below="@id/selection_name_text">

        <Button
            android:id="@+id/accept_button"
            android:text="@string/accept_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="buttonAccept" />

        <Button
            android:id="@+id/decline_button"
            android:text="@string/decline_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="buttonDecline" />

    </LinearLayout>

    <ListView
        android:id="@+id/notification_list"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/button_layout">
    </ListView>

</RelativeLayout>